# working-needlemanipulation

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  m3_simulation_friendly_manipulator_example.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-publish.yml
include/: M3_SerialManipulatorSimulatorFriendly.h
marinholab/working/needlemanipulation/: __init__.py  _impl.py  example.py  example_create_needle_controller.py  icra2019_controller.py  needle_controller.py
marinholab/working/needlemanipulation/scenes/: UR3_410rev0.ttt
saul/: PedriatricSimulator.py  grasping_needle.py
src/: M3_SerialManipulatorSimulatorFriendly.cpp  core.cpp
