[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "setuptools-git-versioning>=2.0,<3"
]
build-backend = "setuptools.build_meta"

[project]
name = 'marinholab-working-needlemanipulation'
authors = [
    {name = "Murilo M. Marinho", email = "murilomarinho@ieee.org"}
]
maintainers = [
    {name = "Murilo M. Marinho", email = "murilomarinho@ieee.org"}
]
dynamic = ["version"]
dependencies=[
    'dqrobotics>=23.4.0a49'
]
description = "Ongoing work on needle manipulation in a collaboration between UTokyo and UoM."
readme = "README.md"
requires-python = ">= 3.9"

[tool.setuptools.package-data]
mypkg = ["*.yaml"]

# https://pypi.org/project/setuptools-git-versioning/
[tool.setuptools-git-versioning]
enabled = true
# https://stackoverflow.com/questions/73605607/how-to-use-setuptools-scm
dev_template = "{tag}.{ccount}"
dirty_template = "{tag}.{ccount}"

[project.scripts]
needlemanipulation_example = "marinholab.working.needlemanipulation.example:main"
needlemanipulation_example_load_from_file = "marinholab.working.needlemanipulation.example_load_from_file:main"